# sale-monitor-next

./: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  supervisord.conf
archived/: index-cards-layout.html
config/: config.example.json  config.json  logging.example.ini
data/: .gitkeep  history.db  products.csv  products.example.csv  state.json
src/sale_monitor/cli/: __init__.py  db_cleanup.py  main.py
src/sale_monitor/domain/: __init__.py  models.py
src/sale_monitor/services/: auto_detector.py  notifications.py  price_extractor.py  scheduler.py
src/sale_monitor/storage/: __init__.py  base.py  csv_products.py  file_lock.py  json_state.py  json_store.py  price_history.py  sqlite_store.py
src/sale_monitor/web/: __init__.py  app.py
src/sale_monitor/web/routes/: products.py
src/sale_monitor/web/templates/: alerts.html  base.html  index.html  manage.html  product_detail.html
tests/: conftest.py  test_cli_cooldown.py  test_json_state.py  test_notifications.py  test_price_extractor.py  test_price_history.py  test_storage_json.py  test_web_app.py
