[tool]
name = "sale-monitor-next"
version = "0.1.0"
description = "A project to monitor product prices and send notifications when they go on sale."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[dependencies]
requests = "^2.26.0"
beautifulsoup4 = "^4.10.0"
schedule = "^1.1.0"
python-dotenv = "^0.19.0"

[dev-dependencies]
pytest = "^6.2.5"
black = "^21.9b0"
isort = "^5.9.3"
mypy = "^0.910"